samples/_failures_safe/1761145498_bda3a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cfb6a7e.c: In function ‘main’:
./samples/SAFE/__tmp_6cfb6a7e.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Matrix addition successful:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_6cfb6a7e.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6cfb6a7e.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6cfb6a7e.c:150:21: error: expected declaration or statement at end of input
